--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>Amina Mohammed</h1>
+        <img src="Woman.jpg">
+        <p>My name is Amina mohammed,23years old born and raised in kenya.</p>
     </body>
 </html>
